// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Attribute snapshot smoke 1`] = `
<div>
  <dt
    class="text-dark-aaaa font-medium"
  >
    Recruiting contact
  </dt>
  <dd
    class="text-dark-aaa font-normal"
  >
    Drew Lustro
  </dd>
</div>
`;

exports[`AttributeList snapshot lg 1`] = `
<dl
  class="text-lg lg"
>
  <div>
    <dt
      class="text-dark-aaaa font-medium"
    >
      key
    </dt>
    <dd
      class="text-dark-aaa font-normal"
    >
      value
    </dd>
  </div>
  <div>
    <dt
      class="text-dark-aaaa font-medium"
    >
      term
    </dt>
    <dd
      class="text-dark-aaa font-normal"
    >
      definition
    </dd>
  </div>
</dl>
`;

exports[`AttributeList snapshot md 1`] = `
<dl
  class="text-md md"
>
  <div>
    <dt
      class="text-dark-aaaa font-medium"
    >
      key
    </dt>
    <dd
      class="text-dark-aaa font-normal"
    >
      value
    </dd>
  </div>
  <div>
    <dt
      class="text-dark-aaaa font-medium"
    >
      term
    </dt>
    <dd
      class="text-dark-aaa font-normal"
    >
      definition
    </dd>
  </div>
</dl>
`;

exports[`AttributeList snapshot sm [default] 1`] = `
<dl
  class="text-sm sm"
>
  <div>
    <dt
      class="text-dark-aaaa font-medium"
    >
      key
    </dt>
    <dd
      class="text-dark-aaa font-normal"
    >
      value
    </dd>
  </div>
  <div>
    <dt
      class="text-dark-aaaa font-medium"
    >
      term
    </dt>
    <dd
      class="text-dark-aaa font-normal"
    >
      definition
    </dd>
  </div>
</dl>
`;

exports[`AttributeList snapshot xs  1`] = `
<dl
  class="text-xs xs"
>
  <div>
    <dt
      class="text-dark-aaaa font-medium"
    >
      key
    </dt>
    <dd
      class="text-dark-aaa font-normal"
    >
      value
    </dd>
  </div>
  <div>
    <dt
      class="text-dark-aaaa font-medium"
    >
      term
    </dt>
    <dd
      class="text-dark-aaa font-normal"
    >
      definition
    </dd>
  </div>
</dl>
`;
